<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/splash_bg"
              android:padding="@dimen/_20sdp"
              android:orientation="vertical">
    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/_10sdp"
               android:src="@drawable/back_white"
               android:contentDescription="@string/content_desc"
               />

    <ScrollView android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbars="none"
                android:fillViewport="true"
                android:layout_weight="1">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >


            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/welcome_back"
                      android:textSize="@dimen/_20sdp"
                      android:layout_marginTop="@dimen/_60sdp"
                      android:textColor="@color/colorWhite"
                      style="@style/styleTextSemiBold"/>
            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/login_to_your_account"
                      android:layout_marginTop="@dimen/_5sdp"
                      android:textSize="@dimen/_12sdp"
                      android:textColor="@color/colorWhite"
                      style="@style/styleTextRegular"/>

            <EditText android:layout_width="match_parent"
                      android:textColorHint="@color/hint_color"
                      android:layout_height="wrap_content"
                      android:hint="@string/enter_your_email_address"
                      android:textSize="@dimen/_12sdp"
                      android:id="@+id/etEmail"
                      android:layout_marginTop="@dimen/_50sdp"
                      android:background="@drawable/bg_editext"
                      android:padding="@dimen/_13sdp"
                      android:singleLine="true"
                      android:textColor="@color/colorWhite"
                      style="@style/styleTextMedium"/>

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/password"
                      android:id="@+id/etPassword"
                      android:textColorHint="@color/hint_color"
                      android:inputType="textPassword"
                      android:textSize="@dimen/_12sdp"
                      android:layout_marginTop="@dimen/_10sdp"
                      android:background="@drawable/bg_editext"
                      android:padding="@dimen/_13sdp"
                      android:singleLine="true"
                      android:textColor="@color/colorWhite"
                      style="@style/styleTextMedium"/>

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/login"
                      android:id="@+id/tvLogin"
                      android:textSize="@dimen/_12sdp"
                      android:gravity="center_horizontal"
                      android:layout_marginTop="@dimen/_30sdp"
                      android:background="@drawable/bg_btn_white_thirty"
                      android:padding="@dimen/_13sdp"
                      android:textColor="@color/colorBlue"
                      style="@style/styleTextSemiBold"/>

        </LinearLayout>
    </ScrollView>
    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/forgotyourpassword"
              android:layout_gravity="center_horizontal"
              android:id="@+id/tvForgotPass"
              android:gravity="center_horizontal"
              android:layout_marginTop="@dimen/_10sdp"
              android:textSize="@dimen/_13sdp"
              android:textColor="@color/colorWhite"
              android:padding="@dimen/_10sdp"
              style="@style/styleTextMedium"/>

</LinearLayout>